--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand" href="#page-top"><img src="https://star.edu.rs/images/logo.png" width="170" height="151" alt="..." /></a>
-            <!-- <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="..." /></a> -->
+            <!-- <a class="navbar-brand" href="#page-top"><img src="https://star.edu.rs/images/logo.png" width="170" height="151" alt="..." /></a> -->
+            <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
