--- a/indexk.html
+++ b/indexk.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>STAR - Start Bootstrap Theme</title>
+    <title>STAR - Start Bootstrap Theme </title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -34,12 +34,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul id="ulLinks" class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <!-- <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#test">Test</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li> -->
                 </ul>
             </div>
         </div>
@@ -47,6 +41,7 @@
     <!-- Masthead-->
     <header class="masthead">
         <div class="container">
+            <div class="masthead-subheading" data-bind="text: firstName">Welcome To Our Studio!</div>
             <div class="masthead-subheading">Welcome To Our Studio!</div>
             <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
             <a id="btnTellMeMore" class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
@@ -61,7 +56,7 @@
                 <h3 class="section-subheading fw-bolder">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
             <div class="row text-center" id="servicesSectionRow">
-                <!-- <div class="col-md-4">
+                <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
                         <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
@@ -81,13 +76,13 @@
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
-                        <i class="fas fa-square fa-stack-2x text-primary"></i>
+                        <i class="fas fa-window-close fa-stack-2x text-primary"></i>
                         <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="my-3">Web Security</h4>
                     <p class="fw-bolder">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
                         architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
@@ -197,10 +192,10 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">About</h2>
-                <h3 class="section-subheading fw-bolder">Lorem ipsum dolor sit amet consectetur.</h3>
+                <h3 class="section-subheading fw-bolder">Text ispod</h3>
             </div>
-            <ul class="timeline">
-                <li>
+            <ul class="timeline" id="timelineList">
+                <!-- <li>
                     <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg"
                             alt="..." /></div>
                     <div class="timeline-panel">
@@ -209,9 +204,7 @@
                             <h4 class="subheading">Our Humble Beginnings</h4>
                         </div>
                         <div class="timeline-body">
-                            <p class="fw-bolder">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
-                                voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero
-                                unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                            <p class="fw-bolder">consectetur!</p>
                         </div>
                     </div>
                 </li>
@@ -224,9 +217,7 @@
                             <h4 class="subheading">An Agency is Born</h4>
                         </div>
                         <div class="timeline-body">
-                            <p class="fw-bolder">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut
-                                voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero
-                                unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                            <p class="fw-bolder">1 consectetur!</p>
                         </div>
                     </div>
                 </li>
@@ -270,7 +261,7 @@
                             Story!
                         </h4>
                     </div>
-                </li>
+                </li> -->
             </ul>
         </div>
     </section>
@@ -757,6 +748,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.1/knockout-latest.js"></script>
     <script src="js/scripts.js"></script>
     <!-- Custom JS-->
     <script src="js/app.js"></script>
