--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul id="ulLinks" class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <!-- <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                     <li class="nav-item"><a class="nav-link" href="#test">Test</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li> -->
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -61,7 +61,7 @@
                 <h3 class="section-subheading fw-bolder">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
             <div class="row text-center" id="servicesSectionRow">
-                <!-- <div class="col-md-4">
+                <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fas fa-circle fa-stack-2x text-primary"></i>
                         <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
@@ -87,7 +87,7 @@
                     <h4 class="my-3">Web Security</h4>
                     <p class="fw-bolder">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam
                         architecto quo inventore harum ex magni, dicta impedit.</p>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
